EOD 28th JUNE 2017

--- a/index1.html
+++ b/index1.html
@@ -90,5 +90,53 @@
   </section><!--Skills Section ends-->
 </div><!--Skill Container Ends-->
 
+<!--Gallery-->
+<div class="container">
+  <section id="portfolio">
+      <div class="page-header" id="skills">
+        <h2>Portfolio</h2>
+      </div><!--Header div ends-->
+
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active text-center carouselItem">
+      <h1>Qm+ mobile</h1>
+      <p>Mobile client for Qm+.It is used to register all kinds of messages.The app allows user to upload images along with the reports.Globalization for norwegian language.
+      </p>
+      <p>Technologies Used:Html 5,css3,Jquery Mobile,Cordova</p>
+      <p>Platform Supported: iOS and Android</p>
+        <a href="https://play.google.com/store/apps/details?id=com.phonegap.qm_plus&hl=en" class="card-link">App link</a>
+
+    </div>
+    <div class="item text-center carouselItem" >
+      <h1>Gratitude Journal</h1>
+      <p>Mobile App used to send thanku notes.User can select from a range of templates to form the message and messages can be shared on facebook,twitter and linkedIn.User can also set reminders for sending thank u notes.A unique way of showing gratitude.
+      </p>
+      <p>Technologies Used:Html 5,css3,Jquery Mobile,Cordova</p>
+      <p>Platform Supported: iOS and Android</p>
+        <a href="https://play.google.com/store/apps/details?id=com.phonegap.uthanku" class="card-link">App link</a>
+    </div>
+    <div class="item text-center carouselItem" >
+      <img class="d-block img-fluid" src="img/images.jpeg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+  </section><!--Section ends-->
+
+</div><!--container ends-->
+
 </body>
 </html>
