From Office 29th June 2017

--- a/index1.html
+++ b/index1.html
@@ -102,28 +102,77 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active text-center carouselItem">
       <h1>Qm+ mobile</h1>
-      <p>Mobile client for Qm+.It is used to register all kinds of messages.The app allows user to upload images along with the reports.Globalization for norwegian language.
+      <p style="padding:0 30px;">Mobile client for Qm+.It is used to register all kinds of messages.The app allows user to upload images along with the reports.Globalization for norwegian language.
       </p>
       <p>Technologies Used:Html 5,css3,Jquery Mobile,Cordova</p>
       <p>Platform Supported: iOS and Android</p>
-        <a href="https://play.google.com/store/apps/details?id=com.phonegap.qm_plus&hl=en" class="card-link">App link</a>
+        <a href="https://play.google.com/store/apps/details?id=com.phonegap.qm_plus&hl=en" class="card-link">Playstore link</a>
 
-    </div>
+    </div><!--Item 0-->
+
     <div class="item text-center carouselItem" >
       <h1>Gratitude Journal</h1>
       <p>Mobile App used to send thanku notes.User can select from a range of templates to form the message and messages can be shared on facebook,twitter and linkedIn.User can also set reminders for sending thank u notes.A unique way of showing gratitude.
       </p>
       <p>Technologies Used:Html 5,css3,Jquery Mobile,Cordova</p>
       <p>Platform Supported: iOS and Android</p>
-        <a href="https://play.google.com/store/apps/details?id=com.phonegap.uthanku" class="card-link">App link</a>
-    </div>
+        <a href="https://play.google.com/store/apps/details?id=com.phonegap.uthanku" class="card-link">Playstore link</a>
+    </div><!--Item 1-->
+
     <div class="item text-center carouselItem" >
-      <img class="d-block img-fluid" src="img/images.jpeg" alt="Third slide">
-    </div>
+      <h1>Eat Online</h1>
+      <p>Mobile App for iphone,ipad and android.The app helped people to view restaurants, place order, or book tables.
+        Was responsible for changing the design of the app.
+      </p>
+      <p>Technologies Used:Html 5,css3,Sencha Touch,Cordova</p>
+      <p>Platform Supported: iOS and Android</p>
+        <a href="https://play.google.com/store/apps/details?id=com.eat.revamp" class="card-link">Playstore link</a>
+    </div><!--Item 2-->
+
+    <div class="item text-center carouselItem" >
+      <h1>FlashCoupons</h1>
+      <p>Mobile App for iphone,ipad and android.The app helped people to view restaurants, place order, or book tables.
+        Was responsible for changing the design of the app.
+      </p>
+      <p>Technologies Used:Html 5,css3,Sencha Touch,Cordova</p>
+      <p>Platform Supported: iOS and Android</p>
+        <a href="https://play.google.com/store/apps/details?id=com.flashcoupon.flashcoupon&hl=en" class="card-link">Playstore link</a>
+    </div><!--Item 3-->
+
+    <div class="item text-center carouselItem" >
+      <h1>BAJAJ MC DSS</h1>
+      <p>Auditing App for BAJAJ showrooms.Auditors could save the data offline as well and sync when network is available.</p>
+      <p>Technologies Used:Bootsrap,Javascript,Cordova</p>
+      <p>Platform Supported: Android</p>
+        <a href="https://play.google.com/store/apps/details?id=com.gladminds.mcdss&hl=en" class="card-link">Playstore link</a>
+    </div><!--Item 4-->
+
+    <div class="item text-center carouselItem" >
+      <h1>Wella Salon Registration</h1>
+      <p>Registration app for 'Wella - The Great Indian Salon Festival - September October 2016'</p>
+      <p>Technologies Used:Html 5,css3,Ionic 1</p>
+      <p>Platform Supported: Android</p>
+        <a href="https://play.google.com/store/apps/details?id=com.ionicframework.wellaapp392765&hl=en" class="card-link">Playstore link</a>
+    </div><!--Item 5-->
+
+    <div class="item text-center carouselItem" >
+      <h1>Worldswipe</h1>
+      <p>WorldSwipe app is your powerful cross program loyalty wallet that enables
+        spends across a host of categories.
+      </p>
+      <p>Technologies Used:Html 5,css3,Ionic</p>
+      <p>Platform Supported: Android</p>
+        <a href="https://play.google.com/store/apps/details?id=com.ionicframework.worldswipe294762&hl=en" class="card-link">Playstore link</a>
+    </div><!--Item 6-->
+
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
